--- a/.config
+++ b/.config
@@ -373,8 +373,8 @@ CONFIG_SOC_STM32F407ZG=y
 #
 CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_SPI_FLASH is not set
-# CONFIG_BSP_USING_COM3 is not set
-# CONFIG_BSP_USING_EEPROM is not set
+CONFIG_BSP_USING_COM3=y
+CONFIG_BSP_USING_EEPROM=y
 # CONFIG_BSP_USING_ETH is not set
 # CONFIG_BSP_USING_MPU6050 is not set
 
@@ -384,14 +384,16 @@ CONFIG_BSP_USING_USB_TO_USART=y
 CONFIG_BSP_USING_GPIO=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_USING_UART2 is not set
-# CONFIG_BSP_USING_UART3 is not set
+CONFIG_BSP_USING_UART3=y
 # CONFIG_BSP_USING_UART6 is not set
 # CONFIG_BSP_UART_USING_DMA_RX is not set
 # CONFIG_BSP_USING_SPI1 is not set
 # CONFIG_BSP_USING_SPI2 is not set
 # CONFIG_BSP_USING_SPI3 is not set
 # CONFIG_BSP_SPI_USING_DMA is not set
-# CONFIG_BSP_USING_I2C1 is not set
+CONFIG_BSP_USING_I2C1=y
+CONFIG_BSP_I2C1_SCL_PIN=24
+CONFIG_BSP_I2C1_SDA_PIN=25
 
 #
 # Board extended module Drivers
