--- a/project.uvprojx
+++ b/project.uvprojx
@@ -482,6 +482,16 @@
               <FileType>1</FileType>
               <FilePath>applications\temp_humi.c</FilePath>
             </File>
+            <File>
+              <FileName>pm25.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>applications\pm25.c</FilePath>
+            </File>
+            <File>
+              <FileName>pm25_th.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>applications\pm25_th.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
